Fixed many issues that the translation had, including not saving on reload/page leave

--- a/public/localization/de.json
+++ b/public/localization/de.json
@@ -4,6 +4,10 @@
     "description": "Heyo, ich bin Mero. Ich bin ein 16-jähriger selbststudierender Entwickler und studiere derzeit Informatik. Und das war's eigentlich schon über mich.",
     "footerText1": "OwO was ist das?",
     "footerText2": "Wenn du mich erreichen möchtest, findest du mich hier",
-    "contactLinkText": "Hier"
+    "contactLinkText": "Hier",
+    "programmingLanguages": "Programmiersprachen",
+    "frameworksAndLibraries": "Frameworks und Bibliotheken",
+    "Virtualization": "Virtualisierung"
 }
+
 
