--- a/public/localization/es.json
+++ b/public/localization/es.json
@@ -4,6 +4,9 @@
     "description": "¡Hola! Soy Mero. Soy un desarrollador autodidacta de 16 años que actualmente estudia ciencias de la computación. Y eso es todo sobre mí.",
     "footerText1": "OwO ¿Qué es esto?",
     "footerText2": "Si deseas ponerse en contacto conmigo, consulta",
-    "contactLinkText": "Aquí"
+    "contactLinkText": "Aquí",
+    "programmingLanguages": "Lenguajes de programación",
+    "frameworksAndLibraries": "Frameworks y bibliotecas",
+    "Virtualization": "Virtualización"
 }
 
