--- a/public/localization/en.json
+++ b/public/localization/en.json
@@ -4,7 +4,9 @@
     "description": "Heyo, I'm Mero. I'm a 16-year-old self-taught developer currently studying computer science. And that's really it for me.",
     "footerText1": "OwO what's this?",
     "footerText2": "Anyways, if you want to reach me refer to",
-    "contactLinkText": "Here"
+    "contactLinkText": "Here",
+    "programmingLanguages": "Programming Languages",
+    "frameworksAndLibraries": "Frameworks and Libraries",
+    "Virtualization": "Virtualization"
   }
-  
 
