--- a/public/localization/pl.json
+++ b/public/localization/pl.json
@@ -1,8 +1,11 @@
 {
-    "headerText": "Cześć! Jestem",
-    "title": "Kim jestem?",
-    "description": "Hej, nazywam się Mero. Jestem 16-letnim samowyksztalconym deweleperem studiującym informatykę. I to tak naprawde tyle z mojej strony.",
-    "footerText1": "OwO A co to?",
-    "footerText2": "W każdym razie, jeżeli chcesz skontaktować się ze mną, metody mojego kontaktu są ",
-    "contactLinkText": "Tutaj"
-  }
+  "headerText": "Cześć! Jestem",
+  "title": "Kim jestem?",
+  "description": "Hej, nazywam się Mero. Jestem 16-letnim samowykształconym deweloperem studiującym informatykę. I to tak naprawdę tyle z mojej strony.",
+  "footerText1": "OwO co to?",
+  "footerText2": "W każdym razie, jeśli chcesz skontaktować się ze mną, metody mojego kontaktu są ",
+  "contactLinkText": "Tutaj",
+  "programmingLanguages": "Języki programowania",
+  "frameworksAndLibraries": "Frameworki i biblioteki",
+  "Virtualization": "Narzędzia i technologie"
+}
