--- a/public/localization/de.json
+++ b/public/localization/de.json
@@ -3,7 +3,7 @@
     "title": "Wer bin ich?",
     "description": "Heyo, ich bin Mero. Ich bin ein 16-jähriger selbststudierender Entwickler und studiere derzeit Informatik. Und das war's eigentlich schon über mich.",
     "footerText1": "OwO was ist das?",
-    "footerText2": "Wenn du mich erreichen möchtest, findest du mich hier",
+    "footerText2": "Wenn du mich erreichen möchtest, findest du mich",
     "contactLinkText": "Hier",
     "programmingLanguages": "Programmiersprachen",
     "frameworksAndLibraries": "Frameworks und Bibliotheken",
