--- a/public/localization/en.json
+++ b/public/localization/en.json
@@ -1,12 +1,11 @@
 {
     "headerText": "Hi, i'm",
     "title": "Who am I?",
-    "description": "Heyo, I'm Mero. I'm a 16-year-old self-taught developer currently studying computer science. And that's really it for me.",
+    "description": "Heyo, i'm Mero, i'm a toaster and i do code :3",
     "footerText1": "OwO what's this?",
     "footerText2": "Anyways, if you want to reach me refer to",
     "contactLinkText": "Here",
     "programmingLanguages": "Programming Languages",
-    "frameworksAndLibraries": "Frameworks and Libraries",
-    "Virtualization": "Virtualization"
+    "frameworksAndLibraries": "Frameworks and Libraries"
   }
 
