--- a/public/localization/de.json
+++ b/public/localization/de.json
@@ -1,13 +1,12 @@
 {
-    "headerText": "Hi, ich bin",
+    "headerText": "Hallöchen, ich bin",
     "title": "Wer bin ich?",
-    "description": "Heyo, ich bin Mero. Ich bin ein 16-jähriger selbststudierender Entwickler und studiere derzeit Informatik. Und das war's eigentlich schon über mich.",
+    "description": "Heyo, ich bin Mero, ich bin ein Toaster und ich mache Code :3",
     "footerText1": "OwO was ist das?",
     "footerText2": "Wenn du mich erreichen möchtest, findest du mich",
     "contactLinkText": "Hier",
     "programmingLanguages": "Programmiersprachen",
-    "frameworksAndLibraries": "Frameworks und Bibliotheken",
-    "Virtualization": "Virtualisierung"
+    "frameworksAndLibraries": "Frameworks und Bibliotheken"
 }
 
 
