Added the translation text for frontend and backend

--- a/public/localization/en.json
+++ b/public/localization/en.json
@@ -5,7 +5,7 @@
     "footerText1": "OwO what's this?",
     "footerText2": "Anyways, if you want to reach me refer to",
     "contactLinkText": "Here",
-    "programmingLanguages": "Programming Languages",
-    "frameworksAndLibraries": "Frameworks and Libraries"
+    "frontend": "Frontend",
+    "backend": "Backend"
   }
 
