--- a/public/localization/es.json
+++ b/public/localization/es.json
@@ -5,7 +5,7 @@
     "footerText1": "OwO ¿Qué es esto?",
     "footerText2": "Si deseas ponerse en contacto conmigo, consulta",
     "contactLinkText": "Aquí",
-    "programmingLanguages": "Lenguajes de programación",
-    "frameworksAndLibraries": "Frameworks y bibliotecas"
+    "frontend": "Frontend",
+    "backend": "Backend"
 }
 
