--- a/public/localization/jp.json
+++ b/public/localization/jp.json
@@ -5,7 +5,7 @@
     "footerText1": "OwO これは何？",
     "footerText2": "とにかく、私に連絡したい場合は、以下を参照してください。",
     "contactLinkText": "こちら",
-    "programmingLanguages": "プログラミング言語",
-    "frameworksAndLibraries": "フレームワークとライブラリ"
+    "frontend": "フロントエンド",
+    "backend": "バックエンド"
 }
 
