--- a/public/localization/ru.json
+++ b/public/localization/ru.json
@@ -5,8 +5,8 @@
     "footerText1": "OwO что то?",
     "footerText2": "В любом случае, если вы хотите связаться со мной, обратитесь к",
     "contactLinkText": "Здесь",
-    "programmingLanguages": "Языки программирования",
-    "frameworksAndLibraries": "Фреймворки и библиотеки"
+    "frontend": "Frontend",
+    "backend": "Backend"
 }
 
 
