Fixed capitalization in the translation handler

--- a/public/localization/de.json
+++ b/public/localization/de.json
@@ -5,8 +5,8 @@
     "footerText1": "OwO was ist das?",
     "footerText2": "Wenn du mich erreichen möchtest, findest du mich",
     "contactLinkText": "Hier",
-    "frontend": "Frontend",
-    "backend": "Backend"
+    "frontEnd": "frontEnd",
+    "backEnd": "backEnd"
 }
 
 
