--- a/public/localization/pl.json
+++ b/public/localization/pl.json
@@ -5,6 +5,6 @@
   "footerText1": "OwO co to?",
   "footerText2": "W każdym razie, jeśli chcesz skontaktować się ze mną, metody mojego kontaktu są ",
   "contactLinkText": "Tutaj",
-  "frontEnd": "frontEnd",
-    "backEnd": "backEnd"
+  "Frontend": "Frontend",
+    "Backend": "Backend"
 }
