--- a/public/localization/de.json
+++ b/public/localization/de.json
@@ -5,8 +5,8 @@
     "footerText1": "OwO was ist das?",
     "footerText2": "Wenn du mich erreichen möchtest, findest du mich",
     "contactLinkText": "Hier",
-    "frontEnd": "frontEnd",
-    "backEnd": "backEnd"
+    "Frontend": "Frontend",
+    "Backend": "Backend"
 }
 
 
