--- a/public/localization/en.json
+++ b/public/localization/en.json
@@ -5,7 +5,7 @@
     "footerText1": "OwO what's this?",
     "footerText2": "Anyways, if you want to reach me refer to",
     "contactLinkText": "Here",
-    "frontEnd": "frontEnd",
-    "backEnd": "backEnd"
+    "Frontend": "Frontend",
+    "Backend": "Backend"
   }
 
