--- a/public/localization/jp.json
+++ b/public/localization/jp.json
@@ -1,7 +1,7 @@
 {
     "headerText": "こんにちは、私は",
-    "title": "私は誰ですか？",
-    "description": "ヘイオー、私はメロ、トースターで、コードを作る :3",
+    "title": "これは何ですか？",
+    "description": "このサイトはポートフォリオとして、また私のソーシャルリンクのハブとして機能します。完全なソースコードはGitHubのリポジトリで確認でき、Next.jsを使用して作成されました。",
     "footerText1": "OwO これは何？",
     "footerText2": "とにかく、私に連絡したい場合は、以下を参照してください。",
     "contactLinkText": "こちら",
