--- a/public/localization/ru.json
+++ b/public/localization/ru.json
@@ -1,8 +1,8 @@
 {
     "headerText": "Привет, я",
-    "title": "Кто я?",
-    "description": "Привет, я Меро, я тостер и я пишу код :3",
-    "footerText1": "OwO что то?",
+    "title": "Что это?",
+    "description": "Этот сайт служит в качестве портфолио и центра для моих социальных сетей. Полный исходный код доступен в репозитории на GitHub и был разработан с использованием Next.js.",  
+    "footerText1": "OwO что это?",
     "footerText2": "В любом случае, если вы хотите связаться со мной, обратитесь к",
     "contactLinkText": "Здесь",
     "Frontend": "Frontend",
